<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:isScrollContainer="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introText"
        android:textStyle="italic"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sampleLastname"
            android:maxLines="1"
            android:inputType="textCapSentences"
            android:textSize="15sp"
            android:maxEms="10"
            android:minEms="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sampleFirstname"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textSize="15sp"
            android:maxEms="10"
            android:minEms="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthDate"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="10dp" />
        <TextView
            android:id="@+id/birthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sampleDate"
            android:textSize="15sp"
            android:padding="10dp" />
        <Button
            android:id="@+id/setDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/edit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthPlace"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/birthPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/samplePlace"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textSize="15sp"
            android:maxEms="10"
            android:minEms="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/dept"/>
        <Spinner
            android:id="@+id/dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/departments"
            android:spinnerMode="dialog"/>
    </LinearLayout>
</LinearLayout>