<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity"
    android:id="@+id/displayLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:isScrollContainer="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/displayTitle"
            android:textStyle="bold"
            android:textSize="30sp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/displayIntro"
            android:textStyle="italic"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/userLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sampleLastname"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/viewBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewLast"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginLeft="25dp"
                android:onClick="viewLast"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/userFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sampleFirstname"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editFirst"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginLeft="25dp"
                android:onClick="editFirst"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthDate"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="10dp" />
            <TextView
                android:id="@+id/userDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sampleDate"
                android:textSize="15sp"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthPlace"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/userPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/samplePlace"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/dept"/>
            <TextView
                android:id="@+id/userDept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/dept"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="25sp"/>
            <LinearLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbars="vertical">
                <LinearLayout
                    android:id="@+id/numberLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phoneNb"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:padding="10dp"/>
                    <TextView
                        android:id="@+id/userPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/noPhone"
                        android:layout_marginLeft="15dp"
                        android:textSize="15sp"/>
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>

</ScrollView>