<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="fill_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNb"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/samplePhone"
        android:textSize="15sp"
        android:padding="10dp"/>
    <Button
        android:id="@+id/dialBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialNb"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginLeft="25dp"/>
</LinearLayout>
