<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="fill_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNb"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/newNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/samplePhone"
        android:inputType="phone"
        android:textSize="15sp"
        android:padding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff0000"
        android:onClick="deleteNumber"
        android:text="@string/delPhone"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"/>
</LinearLayout>
