<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/editLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        android:textSize="35dp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="20sp"/>

    <EditText
        android:id="@+id/firstEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sampleFirstname"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:inputType="textCapSentences"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20sp">
        <Button
            android:id="@+id/editOk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/validate"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginRight="20sp"/>
        <Button
            android:id="@+id/editCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:background="#ff0000"
            android:textColor="@color/white"
            android:layout_marginLeft="20sp"
            android:textStyle="bold"
            android:onClick="cancelEdit"/>
    </LinearLayout>


</LinearLayout>